<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="150dp">

    <EditText
        android:id="@+id/inputUrl"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="12dp"
        android:hint="https://"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addUrlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_url"
        app:layout_constraintEnd_toEndOf="@id/inputUrl"
        app:layout_constraintStart_toStartOf="@id/inputUrl"
        app:layout_constraintTop_toBottomOf="@id/inputUrl" />

</androidx.constraintlayout.widget.ConstraintLayout>