...
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/editImageRecyclerView"
        app:layout_constraintTop_toBottomOf="@id/bottomSheetText">
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_photo_album_24" />

        <ImageView
            android:id="@+id/urlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_link_24" />
    </LinearLayout>

...
