<resources>
    <string name="app_name">Memo App</string>
    <string name="memo_list">Memo List</string>
    <string name="memo_editor">Memo Editor</string>
    <string name="memo_detail">Memo Detail</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="add_image">Add Image</string>
    <string name="delete">delete</string>
    <string name="modify">modify</string>
    <string name="add_url">Add Url</string>
</resources>