<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/delete"
        android:id="@+id/menu_delete"/>
    <item
        android:icon="@drawable/ic_edit"
        android:title="@string/modify"
        android:id="@+id/menu_modify"
        app:showAsAction="ifRoom" />

</menu>